--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": ".",
-  "name": "react-typescript-starter-pack",
+  "name": "personal_page",
   "version": "0.1.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
@@ -15,7 +15,9 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
     "typescript-eslint-parser": "^22.0.0",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "axios": "^1.6.2",
+    "classnames": "^2.3.2"
   },
   "scripts": {
     "lint": "eslint ./src --fix",
