--- a/src/api/projects.json
+++ b/src/api/projects.json
@@ -3,7 +3,7 @@
     "id": 1,
     "title": "Crazybaby Landing Page",
     "description": "Presentation landing page for Luna Eye speakers. Provides information about the product, its technical characteristics and advantages.",
-    "image": "img/projects/crazybaby.jpg",
+    "image": "img/projects/crazybaby.webp",
     "gitHubUrl": "https://github.com/vlkzmn/crazybaby_landing",
     "url": "https://vlkzmn.github.io/crazybaby_landing/",
     "stack": "HTML Sass JavaScript",
@@ -13,7 +13,7 @@
     "id": 2,
     "title": "MyBike Landing Page",
     "description": "Landing page for a bicycle store. Demonstrates the most popular models, describes the main characteristics and advantages and provides a contact form.",
-    "image": "img/projects/bike.jpg",
+    "image": "img/projects/bike.webp",
     "gitHubUrl": "https://github.com/vlkzmn/mybike_landing",
     "url": "https://vlkzmn.github.io/mybike_landing/",
     "stack": "HTML Sass JavaScript",
@@ -23,7 +23,7 @@
     "id": 3,
     "title": "Potr Pots Landing Page",
     "description": "Landing page for POTR POTS Self Watering Plant Pots. Provides information about the features of using pots, the advantages compared to other pots, and the creators. There is a feedback form on the page.",
-    "image": "img/projects/potr-pots.jpg",
+    "image": "img/projects/potr-pots.webp",
     "gitHubUrl": "https://github.com/vlkzmn/potr_pots_landing",
     "url": "https://vlkzmn.github.io/potr_pots_landing/",
     "stack": "HTML Sass JavaScript",
@@ -43,7 +43,7 @@
     "id": 5,
     "title": "NAMU Landing Page",
     "description": "The second version of the landing page for the National Art Museum of Ukraine. According to the technical specifications, only the main page has been implemented, links to other pages are not working.",
-    "image": "img/projects/namu.jpg",
+    "image": "img/projects/namu.webp",
     "gitHubUrl": "https://github.com/vlkzmn/namu_landing",
     "url": "https://vlkzmn.github.io/namu_landing/",
     "stack": "HTML Sass",
@@ -53,7 +53,7 @@
     "id": 6,
     "title": "Miami Landing Page",
     "description": "Landing page for a real estate agency. Provides information about the agency's work, demonstrates several of the most attractive real estate properties, displays reviews of the agency's clients and provides a contact form.",
-    "image": "img/projects/miami.jpg",
+    "image": "img/projects/miami.webp",
     "gitHubUrl": "https://github.com/vlkzmn/miami_landing",
     "url": "https://vlkzmn.github.io/miami_landing/",
     "stack": "HTML Sass JavaScript",
@@ -62,10 +62,10 @@
   {
     "id": 7,
     "title": "My Personal Page",
-    "description": "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde deserunt enim earum esse in qui corrupti!",
-    "image": "img/projects/vlkzmn.jpg",
-    "gitHubUrl": "https://github.com/vlkzmn/personal_page",
-    "url": "https://vlkzmn.github.io/personal_page/",
+    "description": "My personal page, it’s about me, my skills, my works and get in touch.",
+    "image": "img/projects/vlkzmn.webp",
+    "gitHubUrl": "https://github.com/vlkzmn/volodymyr_kuzmin",
+    "url": "https://vlkzmn.github.io/volodymyr_kuzmin/",
     "stack": "React Typescript Sass",
     "isFeatured": false
   },
