--- a/src/api/projects.json
+++ b/src/api/projects.json
@@ -62,7 +62,7 @@
   {
     "id": 7,
     "title": "My Personal Page",
-    "description": "My personal page, it’s about me, my skills, my works and get in touch.",
+    "description": "My personal page, it’s about me, my skills, my projects and getting in touch.",
     "image": "img/projects/vlkzmn.webp",
     "gitHubUrl": "https://github.com/vlkzmn/volodymyr_kuzmin",
     "url": "https://vlkzmn.github.io/volodymyr_kuzmin/",
