--- a/src/api/projects.json
+++ b/src/api/projects.json
@@ -2,7 +2,7 @@
   {
     "id": 1,
     "title": "Crazybaby Landing Page",
-    "description": "Presentation landing page for Luna Eye speakers. Provides information about the product, its technical characteristics and advantages.",
+    "description": "Landing Page Presentation for Luna Eye Speakers: Unveiling detailed insights into the product, its technical features, and the numerous advantages it brings.",
     "image": "img/projects/crazybaby.webp",
     "gitHubUrl": "https://github.com/vlkzmn/crazybaby_landing",
     "url": "https://vlkzmn.github.io/crazybaby_landing/",
