add new project

--- a/src/api/projects.json
+++ b/src/api/projects.json
@@ -109,5 +109,15 @@
     "url": "https://vlkzmn.github.io/todo_app/",
     "stack": "React Typescript Sass",
     "isFeatured": false
+  },
+  {
+    "id": 12,
+    "title": "Schema Questionnaire",
+    "description": "Psychological test - multi-language, dark/light theme, saving results to the database and sending results to PDF.",
+    "image": "",
+    "gitHubUrl": "https://github.com/vlkzmn/shema/settings/pages",
+    "url": "https://vlkzmn.github.io/shema/",
+    "stack": "React Typescript Node.js",
+    "isFeatured": false
   }
 ]
