cv link updated

--- a/src/api/projects.json
+++ b/src/api/projects.json
@@ -2,7 +2,7 @@
   {
     "id": 14,
     "title": "Charity Project Big Hearts",
-    "description": "Charity Project Big Hearts. The application makes it possible to post advertisements in which you can offer free things or services, or advertisements requesting help or collecting donations.",
+    "description": "The application makes it possible to post advertisements in which you can offer free things or services, or advertisements requesting help or collecting donations.",
     "image": "img/projects/big-hearts.webp",
     "gitHubUrl": "https://github.com/vlkzmn/big_hearts",
     "url": "https://velyki-sertsia.pp.ua/",
